Add gix dependency and implement basic repository discovery
- Updated Cargo.toml to include the gix library (version 0.73.0) and anyhow for error handling.
- Modified main.rs to perform a scan for a Git repository in the current directory and print its path.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+# Core Gitoxide library (async client over gix-protocol)
+gix = { version = "0.73.0", default-features = false, features = ["async-network-client"] }
+anyhow = "1.0"      # for simple error handling
+
